@@ -1,3 +1,8 @@
+2005-09-27  Andrew Cagney  <cagney@redhat.com>
+
+	* Fork.java: Have "ptrace" should call "ptrace", not "exec".
+	Update comments.
+
 2005-09-18  Andrew Cagney  <cagney@redhat.com>
 
 	* package.html: New file.
